# mlops_databricks_app

./: .env.example  .gitignore  DATABASE_SCHEMA.md  DATABRICKS_MLOPS_APP_SPECIFICATION.md  DECISIONS_NEEDED.md  HOW_TO_USE.md  IMPLEMENTATION_SPEC.md  MLOPS_CONTROL_PLANE_DESIGN.md  PROCESS_MAP.md  PROJECT_STATUS.md  README.md  WIREFRAMES.md  app.py  app.yaml  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
components/: demo.py  theme.py
db/: schema.sql  setup.py
design/: MLOps Command Center.html
pages/: 01_projects.py  02_new_project.py  03_approvals.py  04_monitoring.py  05_settings.py  06_project_dashboard.py  07_data_contracts.py  08_feature_catalog.py  09_hitl_review.py  10_portfolio_analytics.py
policy_packs/: generic_tiering.yaml  org_pack.yaml.example
scripts/: deploy_app.py  run_full_demo.py  seed_demo_data.py  verify_champion_alias.py  verify_live_bundle_features.py  verify_live_roundtrip.py  verify_live_streaming.py
services/: ai_service.py  approval_service.py  budget_policy_service.py  bundle_commit_service.py  bundle_service.py  capacity_service.py  data_profiling_service.py  data_quality_service.py  data_versioning_service.py  db_service.py  explainability_config.py  feature_contract_service.py  feedback_join_service.py  generator_service.py  hitl_review_service.py  interview_service.py  monitoring_service.py  notification_service.py  policy_pack_service.py  portfolio_analytics_service.py  project_deletion_service.py  project_provisioning_service.py  qa_cleanup_service.py  reconciliation_service.py  registry_service.py  (+4 more)
(+73 files in other folders)
